--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@babel/core": "^7.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.17",
