--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-router-dom": "^6.2.2",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.17",
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
