--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "js-cookie": "^3.0.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-router-dom": "^6.2.2",
