--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "bobo-bot-website-react",
+  "name": "bobo-bot-website-next",
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "build_no_tsc": "vite build"
+    "dev": "next dev",
+    "build": "next build",
+    "preview": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@babel/core": "^7.16.0",
     "js-cookie": "^3.0.1",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-router-dom": "^6.2.2",
+    "next": "^12.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@types/babel__core": "^7.1.17",
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.25",
     "@types/js-cookie": "^3.0.2",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0"
+    "typescript": "^4.6.3"
   }
 }
