--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.25",
-    "@types/js-cookie": "^3.0.2",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
     "typescript": "^4.6.3"
   }
 }
