--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-typed": "^1.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "next-strict-csp": "^1.0.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
