--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.0.0",
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.5",
-    "next-strict-csp": "^1.0.1"
+    "next-strict-csp": "^1.0.1",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
