--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "js-cookie": "^3.0.1",
     "next": "^12.1.5",
+    "next-strict-csp": "^1.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.5",
-    "next-strict-csp": "^1.0.1"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
